// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<button
  data-variant="primary"
  type="button"
>
  Toggle Details
</button>
<br>
<u-details data-variant="default">
  <u-summary
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    Feide
  </u-summary>
  <div>
    Feide er en nasjonal fellesløsning for sikker identifisering i utdanningssektoren.
  </div>
</u-details>
<u-details data-variant="default">
  <u-summary
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    UIDP
  </u-summary>
  <div>
    UIDP er Udirs nye løsning for identitets- og tilgangskontroll.
  </div>
</u-details>
<u-details data-variant="default">
  <u-summary
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    UBAS
  </u-summary>
  <div>
    UBAS styrer brukertilgang til flere av våre nettjenester. UBAS vil gradvis bli faset ut og erstattet av nyere påloggingsløsninger.
  </div>
</u-details>
`;

exports[`In Card 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <u-details data-variant="default">
    <u-summary
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Vedlegg
    </u-summary>
    <div>
      Vedlegg 1, vedlegg 2, vedlegg 3
    </div>
  </u-details>
</div>
`;

exports[`In Card With Color 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <u-details data-variant="default">
    <u-summary
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Kva er nasjonale prøver?
    </u-summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </u-details>
  <u-details data-variant="default">
    <u-summary
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Korleis skal nasjonale prøver brukast?
    </u-summary>
    <div>
      <ul>
        <li>
          Lærarane skal bruke resultata for å følgje opp elevane sine og i arbeidet med undervegsvurdering og tilpassa opplæring.
        </li>
        <li>
          Kommunar og skolar skal bruke resultata som grunnlag for kvalitetsutvikling i opplæringa.
        </li>
        <li>
          Forskarar kan søkje om å få utlevert resultat frå nasjonale prøver til bruk i forsking.
        </li>
      </ul>
    </div>
  </u-details>
</div>
`;

exports[`Preview 1`] = `
<u-details data-variant="default">
  <u-summary
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    Kva er nasjonale prøver?
  </u-summary>
  <div>
    Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
  </div>
</u-details>
`;
